--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,20 @@ h1 {
 }
   
 .draw-area {
-  width: 600px;
-  height: 400px;
+  /* width: 600px;
+  height: 400px; */
   border: 2px solid #808080;
   position: relative;
   background-color: #fff;
   /* background-color: white; */
 }
   
-.Menu {
-  width: 800px;
-  height: 50px;
+.menu {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  width: 100vw;
+  /* height: 50px; */
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -35,5 +38,16 @@ h1 {
   background-color: #a3a3a32d;
   margin: auto;
   /* margin-top: 10px; */
+}
+
+.menu__button {
+  display: flex;
+  padding: 4px;
+  margin: 10px 0;
+}
+
+.menu-choose {
+  display: flex;
+  margin: 10px 0;
 }
 
